zellij-utils/src/input/unit/snapshots/zellij_utils__input__layout__layout_test__layout_with_tab_and_pane_templates.snap
---
source: zellij-utils/src/input/./unit/layout_test.rs
expression: "normalize_layout_debug(format!(\"{:#?}\", layout))"
---
Layout {
    tabs: [
        (
            None,
            TiledPaneLayout {
                children_split_direction: Horizontal,
                name: None,
                children: [
                    TiledPaneLayout {
                        children_split_direction: Vertical,
                        name: None,
                        children: [
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: None,
                                focus: None,
                                external_children_index: None,
                                children_are_stacked: false,
                                is_expanded_in_stack: false,
                                exclude_from_sync: None,
                                run_instructions_to_ignore: [],
                                hide_floating_panes: false,
                                pane_initial_contents: None,
                                default_fg: None,
                                default_bg: None,
                                restored_from: None,
                                pane_handle: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: Some(
                                            Command(
                                                RunCommand {
                                                    command: "htop",
                                                    args: [],
                                                    cwd: None,
                                                    hold_on_close: true,
                                                    hold_on_start: false,
                                                    originating_plugin: None,
                                                    use_terminal_title: false,
                                                    resurrected: false,
                                                },
                                            ),
                                        ),
                                        borderless: None,
                                        focus: None,
                                        external_children_index: None,
                                        children_are_stacked: false,
                                        is_expanded_in_stack: false,
                                        exclude_from_sync: None,
                                        run_instructions_to_ignore: [],
                                        hide_floating_panes: false,
                                        pane_initial_contents: None,
                                        default_fg: None,
                                        default_bg: None,
                                        restored_from: None,
                                        pane_handle: None,
                                    },
                                ],
                                split_size: None,
                                run: None,
                                borderless: None,
                                focus: None,
                                external_children_index: None,
                                children_are_stacked: false,
                                is_expanded_in_stack: false,
                                exclude_from_sync: None,
                                run_instructions_to_ignore: [],
                                hide_floating_panes: false,
                                pane_initial_contents: None,
                                default_fg: None,
                                default_bg: None,
                                restored_from: None,
                                pane_handle: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: None,
                                focus: None,
                                external_children_index: None,
                                children_are_stacked: false,
                                is_expanded_in_stack: false,
                                exclude_from_sync: None,
                                run_instructions_to_ignore: [],
                                hide_floating_panes: false,
                                pane_initial_contents: None,
                                default_fg: None,
                                default_bg: None,
                                restored_from: None,
                                pane_handle: None,
                            },
                        ],
                        split_size: None,
                        run: None,
                        borderless: None,
                        focus: None,
                        external_children_index: None,
                        children_are_stacked: false,
                        is_expanded_in_stack: false,
                        exclude_from_sync: None,
                        run_instructions_to_ignore: [],
                        hide_floating_panes: false,
                        pane_initial_contents: None,
                        default_fg: None,
                        default_bg: None,
                        restored_from: None,
                        pane_handle: None,
                    },
                ],
                split_size: None,
                run: None,
                borderless: None,
                focus: None,
                external_children_index: None,
                children_are_stacked: false,
                is_expanded_in_stack: false,
                exclude_from_sync: None,
                run_instructions_to_ignore: [],
                hide_floating_panes: false,
                pane_initial_contents: None,
                default_fg: None,
                default_bg: None,
                restored_from: None,
                pane_handle: None,
            },
            [],
        ),
    ],
    focused_tab_index: None,
    template: Some(
        (
            TiledPaneLayout {
                children_split_direction: Horizontal,
                name: None,
                children: [],
                split_size: None,
                run: None,
                borderless: None,
                focus: None,
                external_children_index: None,
                children_are_stacked: false,
                is_expanded_in_stack: false,
                exclude_from_sync: None,
                run_instructions_to_ignore: [],
                hide_floating_panes: false,
                pane_initial_contents: None,
                default_fg: None,
                default_bg: None,
                restored_from: None,
                pane_handle: None,
            },
            [],
        ),
    ),
    swap_layouts: [],
    swap_tiled_layouts: [],
    swap_floating_layouts: [],
}
